Добавил описание как сгенерить веб-сервис
