# flask_app/openapi_server/models/__init__.py
@@ -2,6 +2,7 @@
 # import models into model package
 from openapi_server.models.clear_history_post200_response import ClearHistoryPost200Response
 from openapi_server.models.clear_history_post200_response_message import ClearHistoryPost200ResponseMessage
+from openapi_server.models.command_status_get200_response import CommandStatusGet200Response
 from openapi_server.models.dynamic_data_get200_response import DynamicDataGet200Response
 from openapi_server.models.dynamic_data_get200_response_message import DynamicDataGet200ResponseMessage
 from openapi_server.models.dynamic_data_get200_response_message_battery import DynamicDataGet200ResponseMessageBattery
