# flask_app/openapi_server/models/command_status_get200_response.py
@@ -1,0 +1,165 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class CommandStatusGet200Response(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, db_id=None, ts=None, uuid=None, ok=None, error_text=None):  # noqa: E501
+        """CommandStatusGet200Response - a model defined in OpenAPI
+
+        :param db_id: The db_id of this CommandStatusGet200Response.  # noqa: E501
+        :type db_id: int
+        :param ts: The ts of this CommandStatusGet200Response.  # noqa: E501
+        :type ts: float
+        :param uuid: The uuid of this CommandStatusGet200Response.  # noqa: E501
+        :type uuid: str
+        :param ok: The ok of this CommandStatusGet200Response.  # noqa: E501
+        :type ok: bool
+        :param error_text: The error_text of this CommandStatusGet200Response.  # noqa: E501
+        :type error_text: str
+        """
+        self.openapi_types = {
+            'db_id': int,
+            'ts': float,
+            'uuid': str,
+            'ok': bool,
+            'error_text': str
+        }
+
+        self.attribute_map = {
+            'db_id': 'dbId',
+            'ts': 'ts',
+            'uuid': 'uuid',
+            'ok': 'ok',
+            'error_text': 'errorText'
+        }
+
+        self._db_id = db_id
+        self._ts = ts
+        self._uuid = uuid
+        self._ok = ok
+        self._error_text = error_text
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'CommandStatusGet200Response':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The _command_status_get_200_response of this CommandStatusGet200Response.  # noqa: E501
+        :rtype: CommandStatusGet200Response
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def db_id(self) -> int:
+        """Gets the db_id of this CommandStatusGet200Response.
+
+
+        :return: The db_id of this CommandStatusGet200Response.
+        :rtype: int
+        """
+        return self._db_id
+
+    @db_id.setter
+    def db_id(self, db_id: int):
+        """Sets the db_id of this CommandStatusGet200Response.
+
+
+        :param db_id: The db_id of this CommandStatusGet200Response.
+        :type db_id: int
+        """
+
+        self._db_id = db_id
+
+    @property
+    def ts(self) -> float:
+        """Gets the ts of this CommandStatusGet200Response.
+
+
+        :return: The ts of this CommandStatusGet200Response.
+        :rtype: float
+        """
+        return self._ts
+
+    @ts.setter
+    def ts(self, ts: float):
+        """Sets the ts of this CommandStatusGet200Response.
+
+
+        :param ts: The ts of this CommandStatusGet200Response.
+        :type ts: float
+        """
+
+        self._ts = ts
+
+    @property
+    def uuid(self) -> str:
+        """Gets the uuid of this CommandStatusGet200Response.
+
+
+        :return: The uuid of this CommandStatusGet200Response.
+        :rtype: str
+        """
+        return self._uuid
+
+    @uuid.setter
+    def uuid(self, uuid: str):
+        """Sets the uuid of this CommandStatusGet200Response.
+
+
+        :param uuid: The uuid of this CommandStatusGet200Response.
+        :type uuid: str
+        """
+
+        self._uuid = uuid
+
+    @property
+    def ok(self) -> bool:
+        """Gets the ok of this CommandStatusGet200Response.
+
+
+        :return: The ok of this CommandStatusGet200Response.
+        :rtype: bool
+        """
+        return self._ok
+
+    @ok.setter
+    def ok(self, ok: bool):
+        """Sets the ok of this CommandStatusGet200Response.
+
+
+        :param ok: The ok of this CommandStatusGet200Response.
+        :type ok: bool
+        """
+
+        self._ok = ok
+
+    @property
+    def error_text(self) -> str:
+        """Gets the error_text of this CommandStatusGet200Response.
+
+
+        :return: The error_text of this CommandStatusGet200Response.
+        :rtype: str
+        """
+        return self._error_text
+
+    @error_text.setter
+    def error_text(self, error_text: str):
+        """Sets the error_text of this CommandStatusGet200Response.
+
+
+        :param error_text: The error_text of this CommandStatusGet200Response.
+        :type error_text: str
+        """
+
+        self._error_text = error_text
